----------------------------------
SimpleMail Open Source - ChangeLog
----------------------------------

2007-02-14  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: Don't show autospam marked messages in bold.
	  Added more muikeys for keyboard navigation.
	* folder.c: Added reverse sorting for Filename and POP3 Server column.
	  Only the FOLDER_TYPE_SEND does show the "To" address in the mailtree.
	  Don't call the secondary compare function if it is the same as the primary.

2007-02-13  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: Added IDCMP_INTUITICKS to the mousemove
	  EventHandler to keep scrolling in selected mode while the mouse is outside
	  the list (top or bottom) but not moved.

2007-02-09  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: Set the mailtree again to the default object of the
	  window when clicked inside it.
	  Added new drawupdate state to only refresh the title.
	  The titleclick will now draw the tilecolumn in a selected state to get some visual
	  feedback. It also can be aborted with the right mousebutton or if the mouse is moved
	  outside of the title.

2007-02-06  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: The bold-style must also be used in the CalcEntry().
	  Added safety check for mail pointer (mail_info could be NULL).

2007-02-05  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: Fixed a calculation bug in the memmove() call.
	  The bug could only happen when the mails are not selected continued (eg, 1-3, 5, 9)
	  which is now possible with the key-control. Also the active mail must not be part
	  of the selection anymore.

2007-02-05  Release Version 0.31

2007-02-04  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/searchwnd.c: The MailTreelist is now build with the correct function
	  (it now has scrollbars if necessary).